--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -41,6 +41,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/add_column_text"
         android:layout_marginTop="@dimen/spacing_small"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/add_column_button"
         app:layout_constraintStart_toStartOf="@id/add_column_button"
         android:src="@drawable/ic_minus"/>
@@ -51,6 +52,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/add_column_text"
         android:layout_marginStart="@dimen/spacing_small"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="@id/add_row_button"
         app:layout_constraintStart_toEndOf="@id/add_row_button"
         android:src="@drawable/ic_minus"/>
