--- a/app/src/main/res/drawable/grid_tile.xml
+++ b/app/src/main/res/drawable/grid_tile.xml
@@ -1,21 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-
-    <corners
-        android:radius="@dimen/spacing_small"/>
-
-    <size
-        android:width="@dimen/grid_tile"
-        android:height="@dimen/grid_tile"/>
-
-    <solid
-        android:color="@color/beige"/>
-
-    <stroke
-        android:width="@dimen/line"
-        android:color="@color/black"/>
-
-
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true"
+        android:drawable="@drawable/grid_tile_pressed"/>
+    <item android:state_focused="true"
+        android:drawable="@drawable/grid_tile_focused"/>
+    <item android:drawable="@drawable/grid_tile_normal"/>
+</selector>
