--- a/app/src/main/res/layout/fragment_specify_location.xml
+++ b/app/src/main/res/layout/fragment_specify_location.xml
@@ -45,30 +45,7 @@
 
     <ImageButton
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/outdoors_text_view"
-        android:background="@null"
-        android:id="@+id/indoors_button"
-        android:src="@drawable/house"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:layout_height="@dimen/picture"
-        android:layout_width="@dimen/picture"
-        android:layout_marginTop="@dimen/spacing_medium"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/indoors_button"
-        app:layout_constraintEnd_toEndOf="@id/indoors_button"
-        app:layout_constraintTop_toBottomOf="@id/indoors_button"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_medium"
-        android:fontFamily="@font/roboto"
-        android:text="@string/indoors"/>
-
-    <ImageButton
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/indoors_button"
+        app:layout_constraintTop_toBottomOf="@id/outdoors_button"
         android:background="@null"
         android:id="@+id/greenhouse_button"
         android:src="@drawable/greenhouse"
