--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -8,5 +8,14 @@
         android:id="@+id/gardenOverviewFragment"
         android:name="dk.mifu.pmos.vegetablegardening.viewgarden.GardenOverviewFragment"
         android:label="fragment_garden_overview"
-        tools:layout="@layout/fragment_garden_overview" />
+        tools:layout="@layout/fragment_garden_overview">
+        <action
+            android:id="@+id/see_bed_action"
+            app:destination="@id/bedOverviewFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/bedOverviewFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.viewgarden.BedOverviewFragment"
+        android:label="fragment_bed_overview"
+        tools:layout="@layout/fragment_bed_overview"/>
 </navigation>
