--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -8,5 +8,10 @@
         android:id="@+id/gardenOverviewFragment"
         android:name="dk.mifu.pmos.vegetablegardening.viewgarden.GardenOverviewFragment"
         android:label="fragment_garden_overview"
-        tools:layout="@layout/fragment_garden_overview" />
+        tools:layout="@layout/fragment_garden_overview" >
+        <action
+            android:id="@+id/show_plant_info"
+            app:destination="@id/nav_graph_plant_info" />
+    </fragment>
+    <include app:graph="@navigation/nav_graph_plant_info" />
 </navigation>
