--- a/app/src/main/res/layout/fragment_bed_overview.xml
+++ b/app/src/main/res/layout/fragment_bed_overview.xml
@@ -13,4 +13,14 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bed_text_view">
+
+        <GridView
+            android:id="@+id/gridView_component"
+            />
+    </GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
