--- a/app/src/main/res/layout/list_item_tile.xml
+++ b/app/src/main/res/layout/list_item_tile.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.AppCompatButton xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:text="Her er en plante"
     android:layout_height="wrap_content"
     android:textColor="@color/black"
-    android:id="@+id/plant_text_view"
+    android:id="@+id/plant_button"
+    android:background="@drawable/grid_tile"
 />
