--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -13,13 +13,30 @@
             android:id="@+id/see_bed_action"
             app:destination="@id/bedOverviewFragment" />
     </fragment>
-    <include app:graph="@navigation/nav_graph_plant_info" />
     <fragment
         android:id="@+id/bedOverviewFragment"
         android:name="dk.mifu.pmos.vegetablegardening.viewgarden.BedOverviewFragment"
         android:label="BedOverviewFragment" >
         <action
             android:id="@+id/show_plant_info"
-            app:destination="@id/nav_graph_plant_info" />
+            app:destination="@id/plantInfoDialog" />
     </fragment>
+    <fragment
+        android:id="@+id/plantDetails"
+        android:name="dk.mifu.pmos.vegetablegardening.viewgarden.PlantDetailsFragment"
+        android:label="PlantDetails" >
+        <argument android:name="plant"
+            app:argType="dk.mifu.pmos.vegetablegardening.models.Plant" />
+    </fragment>
+    <dialog
+        android:id="@+id/plantInfoDialog"
+        android:name="dk.mifu.pmos.vegetablegardening.views.PlantInfoDialog"
+        android:label="PlantInfoDialog" >
+        <action
+            android:id="@+id/to_plant_details"
+            app:destination="@id/plantDetails" />
+        <argument
+            android:name="plant"
+            app:argType="dk.mifu.pmos.vegetablegardening.models.Plant" />
+    </dialog>
 </navigation>
