--- a/app/src/main/res/layout/fragment_bed_overview.xml
+++ b/app/src/main/res/layout/fragment_bed_overview.xml
@@ -10,13 +10,18 @@
         android:id="@+id/bed_text_view"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/roboto"
+        android:textSize="@dimen/font_large"
         />
 
     <GridLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_medium"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bed_text_view"
         android:id="@+id/gridlayout">
     </GridLayout>
