--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,5 +14,8 @@
         <!-- Customize your theme here. -->
         <item name="android:background">@color/white</item>
         <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:editTextColor">@color/black</item>
+        <item name="android:textColorHint">@android:color/darker_gray</item>
     </style>
 </resources>
