--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -17,5 +17,6 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:editTextColor">@color/black</item>
         <item name="android:textColorHint">@android:color/darker_gray</item>
+        <item name="android:actionMenuTextColor">@color/black</item>
     </style>
 </resources>
