--- a/app/src/main/res/layout/fragment_empty_tile.xml
+++ b/app/src/main/res/layout/fragment_empty_tile.xml
@@ -7,8 +7,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/plantbare_planter"
+        android:textSize="@dimen/font_large"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/title_plantables_text_view"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_plantables_text_view"
+        android:textSize="@dimen/font_medium"
         android:id="@+id/empty_tile_text_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
