--- a/app/src/main/res/layout/fragment_bed_overview.xml
+++ b/app/src/main/res/layout/fragment_bed_overview.xml
@@ -12,16 +12,35 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:fontFamily="@font/roboto"
-        android:textSize="@dimen/font_large"
+        android:textSize="@dimen/font_medium"
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/explanation_image_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bed_text_view"
+        android:fontFamily="@font/roboto"
+        android:textSize="@dimen/font_small"
+        android:id="@+id/explanation_text_view"
+        android:layout_marginLeft="@dimen/spacing_small"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/explanation_text_view"
+        app:layout_constraintTop_toBottomOf="@id/bed_text_view"
+        android:id="@+id/explanation_image_view"
+        android:layout_marginLeft="@dimen/line"/>
 
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_medium"
+        android:layout_marginTop="@dimen/spacing_small"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bed_text_view"
+        app:layout_constraintTop_toBottomOf="@id/explanation_text_view"
         android:id="@+id/gridlayout">
     </GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
