--- a/app/src/main/res/layout/fragment_choose_plant.xml
+++ b/app/src/main/res/layout/fragment_choose_plant.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.creategarden.ChoosePlantFragment">
+    tools:context=".fragments.creategarden.ChoosePlantDialogFragment">
 
     <EditText
         android:id="@+id/search_plant_edittext"
