--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -47,7 +47,7 @@
     </dialog>
     <dialog
         android:id="@+id/choosePlantFragment"
-        android:name="dk.mifu.pmos.vegetablegardening.fragments.creategarden.ChoosePlantFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.creategarden.ChoosePlantDialogFragment"
         android:label="fragment_choose_plant"
         tools:layout="@layout/fragment_choose_plant" >
         <argument android:name="coordinate"
