--- a/app/src/main/res/layout/fragment_bed_overview.xml
+++ b/app/src/main/res/layout/fragment_bed_overview.xml
@@ -18,21 +18,40 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/explanation_image_view"
+        app:layout_constraintEnd_toStartOf="@id/plantable_explanation_image_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bed_text_view"
         android:fontFamily="@font/roboto"
         android:textSize="@dimen/font_small"
-        android:id="@+id/explanation_text_view"
-        android:layout_marginLeft="@dimen/spacing_small"/>
+        android:id="@+id/plantable_explanation_text_view"
+        android:layout_marginStart="@dimen/spacing_small"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/explanation_text_view"
+        app:layout_constraintStart_toEndOf="@id/plantable_explanation_text_view"
         app:layout_constraintTop_toBottomOf="@id/bed_text_view"
-        android:id="@+id/explanation_image_view"
-        android:layout_marginLeft="@dimen/line"/>
+        android:id="@+id/plantable_explanation_image_view"
+        android:layout_marginStart="@dimen/line"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/water_explanation_image_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/plantable_explanation_text_view"
+        android:fontFamily="@font/roboto"
+        android:textSize="@dimen/font_small"
+        android:id="@+id/water_explanation_text_view"
+        android:layout_marginStart="@dimen/spacing_small"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/water_explanation_text_view"
+        app:layout_constraintTop_toBottomOf="@id/plantable_explanation_text_view"
+        android:id="@+id/water_explanation_image_view"
+        android:layout_marginStart="@dimen/line"/>
 
     <GridLayout
         android:layout_width="wrap_content"
@@ -40,7 +59,7 @@
         android:layout_marginTop="@dimen/spacing_small"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/explanation_text_view"
+        app:layout_constraintTop_toBottomOf="@id/plantable_explanation_text_view"
         android:id="@+id/gridlayout">
     </GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
