--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -26,6 +26,9 @@
         <action
             android:id="@+id/show_planting_options"
             app:destination="@id/choosePlantFragment"/>
+        <action
+            android:id="@+id/delete_bed_action"
+            app:destination="@id/deleteBedConfirmationDialogFragment" />
     </fragment>
     <fragment
         android:id="@+id/plantDetails"
@@ -128,5 +131,10 @@
         <action
             android:id="@+id/save_bed_action"
             app:destination="@id/gardenOverviewFragment" />
+    </dialog>
+    <dialog
+        android:id="@+id/deleteBedConfirmationDialogFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.dialogs.DeleteBedConfirmationDialogFragment"
+        android:label="DeleteBedConfirmationDialogFragment" >
     </dialog>
 </navigation>
