--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -59,7 +59,7 @@
         android:id="@+id/save_garden_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/save_bed"
+        android:contentDescription="@string/save"
         android:layout_marginStart="@dimen/spacing_small"
         android:layout_margin="@dimen/spacing_small"
         app:layout_constraintBottom_toBottomOf="parent"
