--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -79,6 +79,9 @@
         <action
             android:id="@+id/to_plant_details"
             app:destination="@id/plantDetails" />
+        <action
+            android:id="@+id/new_plant_action"
+            app:destination="@id/createPlantDialogFragment" />
     </fragment>
     <dialog
         android:id="@+id/editSortDialogFragment"
@@ -129,4 +132,8 @@
             android:id="@+id/save_bed_action"
             app:destination="@id/gardenOverviewFragment" />
     </dialog>
+    <dialog
+        android:id="@+id/createPlantDialogFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.dialogs.CreatePlantDialogFragment"
+        android:label="CreatePlantDialogFragment" />
 </navigation>
