--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,7 @@
         <item name="android:editTextColor">@color/black</item>
         <item name="android:textColorHint">@android:color/darker_gray</item>
         <item name="navigationViewStyle">@style/Widget.App.NavigationView</item>
+        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense</item>
     </style>
 
     <style name="ButtonStyle">
@@ -36,15 +37,6 @@
         <item name="backgroundTint">@color/blue</item>
         <item name="background">@color/blue</item>
     </style>
-
-    <style name="Theme.VegetableGardening.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="Theme.VegetableGardening.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.VegetableGardening.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="Widget.App.NavigationView" parent="Widget.MaterialComponents.NavigationView">
         <item name="itemIconTint">@color/drawer_item_color</item>
