--- a/app/src/main/res/layout/list_item_crop_rotation.xml
+++ b/app/src/main/res/layout/list_item_crop_rotation.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/crop_rotation_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/plant_name_crop_rotation"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
