--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -52,6 +52,12 @@
         <action
             android:id="@+id/set_germination"
             app:destination="@id/setGerminationDialogFragment"/>
+        <action
+            android:id="@+id/edit_plant"
+            app:destination="@id/createPlantDialogFragment"/>
+        <action
+            android:id="@+id/delete_plant_action"
+            app:destination="@id/deletePlantConfirmationDialogFragment" />
     </fragment>
     <dialog
         android:id="@+id/plantDetailsDialogFragment"
@@ -141,9 +147,23 @@
     <dialog
         android:id="@+id/createPlantDialogFragment"
         android:name="dk.mifu.pmos.vegetablegardening.fragments.dialogs.CreatePlantDialogFragment"
-        android:label="CreatePlantDialogFragment" />
+        android:label="CreatePlantDialogFragment">
+        <argument
+            android:name="plant"
+            app:nullable="true"
+            app:argType="dk.mifu.pmos.vegetablegardening.models.Plant"
+            android:defaultValue="@null" />
+    </dialog>
     <dialog
         android:id="@+id/deleteBedConfirmationDialogFragment"
         android:name="dk.mifu.pmos.vegetablegardening.fragments.dialogs.DeleteBedConfirmationDialogFragment"
         android:label="DeleteBedConfirmationDialogFragment" />
+    <dialog
+        android:id="@+id/deletePlantConfirmationDialogFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.dialogs.DeletePlantConfirmationDialogFragment"
+        android:label="DeletePlantConfirmationDialogFragment">
+        <argument
+            android:name="plant"
+            app:argType="dk.mifu.pmos.vegetablegardening.models.Plant"/>
+    </dialog>
 </navigation>
